<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="bottom"
    android:background="@color/colorTransparent"
    tools:context=".view.InformationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/layout_bg"
        android:layout_gravity="bottom"
        android:gravity="bottom">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:fontFamily="@font/montserrat"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:id="@+id/idScanningTv"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/idStaffImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="16dp"
            android:src="@drawable/ic_baseline_play_circle_filled_24"/>

            <ImageView
                android:id="@+id/idStaffQrCode"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_baseline_qr_code_scanner_24"
                android:layout_alignParentEnd="true"
                android:layout_margin="16dp"/>

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ism_va_familiya"
            android:textSize="16sp"
            android:textColor="?attr/customTextColor"
            android:textStyle="bold"
            android:fontFamily="@font/montserrat"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/idStaffName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="?attr/customTextColor"
            android:fontFamily="@font/montserrat"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lavozim"
            android:textSize="16sp"
            android:textColor="?attr/customTextColor"
            android:textStyle="bold"
            android:fontFamily="@font/montserrat"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/idPosition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="?attr/customTextColor"
            android:fontFamily="@font/montserrat"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kelgan_vaqti"
            android:textSize="16sp"
            android:textColor="?attr/customTextColor"
            android:textStyle="bold"
            android:fontFamily="@font/montserrat"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/idTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="?attr/customTextColor"
            android:fontFamily="@font/montserrat"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filial"
            android:textSize="16sp"
            android:textColor="?attr/customTextColor"
            android:textStyle="bold"
            android:fontFamily="@font/montserrat"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/idSubsidiary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="?attr/customTextColor"
            android:fontFamily="@font/montserrat"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"/>

        <Button
            android:id="@+id/idConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:text="@string/ok"
            android:textColor="?attr/customButtonTextColor"
            android:background="@drawable/login_rounded"/>

    </LinearLayout>

</FrameLayout>