<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/customBgColor"
    tools:context=".view.HomeFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        android:id="@+id/idAppBar">

        <Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/asosiy"
                    android:textColor="?attr/customTextColor"
                    android:textStyle="bold"
                    android:fontFamily="@font/montserrat"
                    android:textSize="18sp"
                    android:paddingBottom="10dp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/idExit"
                    android:src="@drawable/ic_logout_icon_183923"
                    android:layout_marginEnd="10dp"/>

                <TextView
                    android:id="@+id/idExit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chiqish"
                    android:textSize="16sp"
                    android:textColor="?attr/customTextColor"
                    android:fontFamily="@font/montserrat"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="20dp"/>

            </RelativeLayout>

        </Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/idLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/idAppBar"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="end">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_date_range_24"/>

            <TextView
                android:id="@+id/idCurrentDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="11/22/2021"
                android:textSize="13sp"
                android:textColor="?attr/customTextColor"
                android:layout_marginStart="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_icons8_clock"/>

            <TextView
                android:id="@+id/idCurrentTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="11:09"
                android:textSize="13sp"
                android:textColor="?attr/customTextColor"
                android:layout_marginStart="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_location_on_24"/>

            <TextView
                android:id="@+id/idCurrentLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Toshkent"
                android:textSize="13sp"
                android:textColor="?attr/customTextColor"
                android:layout_marginStart="5dp"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/idLinear"
        android:layout_marginTop="60dp"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginHorizontal="20dp"
                android:orientation="horizontal"
                app:layout_constraintDimensionRatio="2:0.7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/idComeToWork"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="12dp"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:src="@drawable/ic_user_login_button_svgrepo_com" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:fontFamily="@font/montserrat"
                            android:text="@string/kelish"
                            android:gravity="center"
                            android:layout_gravity="center"
                            android:textColor="?attr/customTextColor"
                            android:textSize="16sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/idWentFromWork"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="12dp"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_logout_icon_18"
                            android:layout_marginBottom="10dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="@string/ketish"
                            android:textSize="16sp"
                            android:gravity="center"
                            android:layout_gravity="center"
                            android:fontFamily="@font/montserrat"
                            android:textColor="?attr/customTextColor" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginHorizontal="20dp"
                android:orientation="horizontal"
                app:layout_constraintDimensionRatio="2:0.7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/idGoToLunch"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="12dp"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:src="@drawable/ic_baseline_pause_circle_filled_24" />

                        <TextView
                            android:id="@+id/idTvGoToLunch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:fontFamily="@font/montserrat"
                            android:text="@string/tushlikka_chiqish"
                            android:gravity="center"
                            android:textColor="?attr/customTextColor"
                            android:textSize="16sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/idBackFromLaunch"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="12dp"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_baseline_play_circle_filled_24"
                            android:layout_marginBottom="10dp"/>

                        <TextView
                            android:id="@+id/idTvBackFromLunch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="@string/tushlikdan_qaytish"
                            android:textSize="16sp"
                            android:gravity="center"
                            android:fontFamily="@font/montserrat"
                            android:textColor="?attr/customTextColor" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>


</RelativeLayout>